force-app/main/default/objects/Dummy21__c/Dummy21__c.object-meta.xml
<CustomObject>
    <label>Dummy21</label>
    <nameField>
        <label>Dummy21 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy21</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>