force-app/main/default/objects/Dummy21__c/fields/FooBar010__c.field-meta.xml
<CustomField>
    <fullName>FooBar010__c</fullName>
    <label>FooBar010</label>
    <length>255</length>
    <type>Text</type>
</CustomField>