force-app/main/default/objects/Dummy21__c/fields/FooBar048__c.field-meta.xml
<CustomField>
    <fullName>FooBar048__c</fullName>
    <label>FooBar048</label>
    <length>255</length>
    <type>Text</type>
</CustomField>