force-app/main/default/objects/Dummy21__c/fields/FooBar097__c.field-meta.xml
<CustomField>
    <fullName>FooBar097__c</fullName>
    <label>FooBar097</label>
    <length>255</length>
    <type>Text</type>
</CustomField>